--- a/src/CypherSheet.Client/Components/Views/AddItemDialog.razor
+++ b/src/CypherSheet.Client/Components/Views/AddItemDialog.razor
@@ -18,10 +18,21 @@
 @code {
     [CascadingParameter] public IMudDialogInstance MudDialog { get; set; }
     [Parameter] public Character Character { get; set; }
+    [Parameter] public Item ItemToEdit { get; set; }
 
     private string name;
     private int quantity = 1;
     private string description;
+
+    protected override void OnInitialized()
+    {
+        if (ItemToEdit != null)
+        {
+            name = ItemToEdit.Name;
+            quantity = ItemToEdit.Quantity;
+            description = ItemToEdit.Description;
+        }
+    }
 
     void Submit()
     {
@@ -31,7 +42,17 @@
             return;
         }
         
-        Character.Equipment.Add(new Item { Name = name, Quantity = quantity, Description = description });
+        if (ItemToEdit != null)
+        {
+            ItemToEdit.Name = name;
+            ItemToEdit.Quantity = quantity;
+            ItemToEdit.Description = description;
+        }
+        else
+        {
+            Character.Equipment.Add(new Item { Name = name, Quantity = quantity, Description = description });
+        }
+        
         MudDialog.Close(DialogResult.Ok(true));
     }
     void Cancel() => MudDialog.Cancel();
